# stunmachine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  build.sh  client  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  compile_commands.json  server  server.vcxproj  server.vcxproj.filters  stunmachine.sln  stunmachine.vcxproj  stunmachine.vcxproj.filters
client.dir/Release/: client.exe.recipe
client.dir/Release/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
server.dir/Release/: server.exe.recipe
server.dir/Release/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: client.cpp  main.cpp  server.cpp
src/client/: client.cpp
src/server/: server.cpp
stunmachine.dir/Debug/: stunmachine.exe.recipe  stunmachine.ilk
stunmachine.dir/Debug/stunmachine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
stunmachine.dir/Release/: stunmachine.exe.recipe
stunmachine.dir/Release/stunmachine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  stunmachine.lastbuildstate
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
